icon fix on mobile

--- a/src/styles/searchbar.scss
+++ b/src/styles/searchbar.scss
@@ -55,6 +55,9 @@
 @media screen and (max-width: 498px){
     .App{
         .searchBar{
+            input{
+                font-size: .6rem;
+            }
             .icon{
                 svg{
                     width: 100%;
